# streamstack

./: .gitignore  CMakeLists.txt  Makefile
src/: camera.cpp  camera.hpp  concurrentqueue.h  cvutil.hpp  datapipe.hpp  main.cpp  noncopyable.hpp  scheduler.cpp  scheduler.hpp  streamer.cpp  streamer.hpp  task.hpp
test/: CMakeLists.txt  test_camera.cpp  test_pipe.cpp  test_streamer.cpp  test_task.cpp  utils.hpp
